src/parser/snapshots/rbx_rsml__parser__tests__math_missing_right_operand.snap
---
source: src/parser/mod.rs
expression: parsed.ast
---
[
    Assignment {
        pub_modifier: None,
        left: Node {
            token: SpannedToken(
                0,
                TokenIdentifier(
                    "Val",
                ),
                4,
            ),
            leading_trivia: None,
        },
        middle: Some(
            Node {
                token: SpannedToken(
                    5,
                    Equals,
                    6,
                ),
                leading_trivia: None,
            },
        ),
        right: Some(
            MathOperation {
                left: Node {
                    node: Node {
                        token: SpannedToken(
                            7,
                            Number(
                                "10",
                            ),
                            9,
                        ),
                        leading_trivia: None,
                    },
                },
                operators: [
                    Node {
                        token: SpannedToken(
                            10,
                            OpAdd,
                            11,
                        ),
                        leading_trivia: None,
                    },
                ],
                right: None,
            },
        ),
        terminator: Some(
            Node {
                token: SpannedToken(
                    11,
                    SemiColon,
                    12,
                ),
                leading_trivia: None,
            },
        ),
    },
]
