src/parser/snapshots/rbx_rsml__parser__tests__math_mult.snap
---
source: src/parser/mod.rs
expression: parsed.ast
---
[
    Assignment {
        pub_modifier: None,
        left: Node {
            token: SpannedToken(
                0,
                TokenIdentifier(
                    "Val",
                ),
                4,
            ),
            leading_trivia: None,
        },
        middle: Some(
            Node {
                token: SpannedToken(
                    5,
                    Equals,
                    6,
                ),
                leading_trivia: None,
            },
        ),
        right: Some(
            MathOperation {
                left: Node {
                    node: Node {
                        token: SpannedToken(
                            7,
                            Number(
                                "10",
                            ),
                            9,
                        ),
                        leading_trivia: None,
                    },
                },
                operators: [
                    Node {
                        token: SpannedToken(
                            10,
                            OpMult,
                            11,
                        ),
                        leading_trivia: None,
                    },
                ],
                right: Some(
                    Node {
                        node: Node {
                            token: SpannedToken(
                                12,
                                Number(
                                    "5",
                                ),
                                13,
                            ),
                            leading_trivia: None,
                        },
                    },
                ),
            },
        ),
        terminator: Some(
            Node {
                token: SpannedToken(
                    13,
                    SemiColon,
                    14,
                ),
                leading_trivia: None,
            },
        ),
    },
]
