src/parser/snapshots/rbx_rsml__parser__tests__math_udim_mixed.snap
---
source: src/parser/mod.rs
expression: parsed.ast
---
[
    Assignment {
        pub_modifier: None,
        left: Node {
            token: SpannedToken(
                0,
                TokenIdentifier(
                    "Size",
                ),
                5,
            ),
            leading_trivia: None,
        },
        middle: Some(
            Node {
                token: SpannedToken(
                    6,
                    Equals,
                    7,
                ),
                leading_trivia: None,
            },
        ),
        right: Some(
            MathOperation {
                left: Node {
                    node: Node {
                        token: SpannedToken(
                            8,
                            NumberScale(
                                "50%",
                            ),
                            11,
                        ),
                        leading_trivia: None,
                    },
                },
                operators: [
                    Node {
                        token: SpannedToken(
                            12,
                            OpAdd,
                            13,
                        ),
                        leading_trivia: None,
                    },
                ],
                right: Some(
                    Node {
                        node: Node {
                            token: SpannedToken(
                                14,
                                NumberOffset(
                                    "10px",
                                ),
                                18,
                            ),
                            leading_trivia: None,
                        },
                    },
                ),
            },
        ),
        terminator: Some(
            Node {
                token: SpannedToken(
                    18,
                    SemiColon,
                    19,
                ),
                leading_trivia: None,
            },
        ),
    },
]
