src/parser/snapshots/rbx_rsml__parser__tests__multiple_top_level.snap
---
source: src/parser/mod.rs
expression: parsed.ast
---
[
    Priority {
        declaration: Node {
            token: SpannedToken(
                0,
                PriorityDeclaration,
                9,
            ),
            leading_trivia: None,
        },
        body: Some(
            Node {
                node: Node {
                    token: SpannedToken(
                        10,
                        Number(
                            "5",
                        ),
                        11,
                    ),
                    leading_trivia: None,
                },
            },
        ),
        terminator: Some(
            Node {
                token: SpannedToken(
                    11,
                    SemiColon,
                    12,
                ),
                leading_trivia: None,
            },
        ),
    },
    Rule {
        selectors: Some(
            [
                Token(
                    Node {
                        token: SpannedToken(
                            13,
                            Identifier(
                                "Frame",
                            ),
                            18,
                        ),
                        leading_trivia: None,
                    },
                ),
            ],
        ),
        body: Some(
            Delimited {
                left: Node {
                    token: SpannedToken(
                        19,
                        ScopeOpen,
                        20,
                    ),
                    leading_trivia: None,
                },
                content: Some(
                    [
                        Assignment {
                            pub_modifier: None,
                            left: Node {
                                token: SpannedToken(
                                    21,
                                    Identifier(
                                        "Size",
                                    ),
                                    25,
                                ),
                                leading_trivia: None,
                            },
                            middle: Some(
                                Node {
                                    token: SpannedToken(
                                        26,
                                        Equals,
                                        27,
                                    ),
                                    leading_trivia: None,
                                },
                            ),
                            right: Some(
                                Node {
                                    node: Node {
                                        token: SpannedToken(
                                            28,
                                            Number(
                                                "100",
                                            ),
                                            31,
                                        ),
                                        leading_trivia: None,
                                    },
                                },
                            ),
                            terminator: Some(
                                Node {
                                    token: SpannedToken(
                                        31,
                                        SemiColon,
                                        32,
                                    ),
                                    leading_trivia: None,
                                },
                            ),
                        },
                    ],
                ),
                right: Some(
                    Node {
                        token: SpannedToken(
                            33,
                            ScopeClose,
                            34,
                        ),
                        leading_trivia: None,
                    },
                ),
            },
        ),
    },
]
