src/parser/snapshots/rbx_rsml__parser__tests__name_missing_semicolon.snap
---
source: src/parser/mod.rs
expression: parsed.ast
---
[
    Name {
        declaration: Node {
            token: SpannedToken(
                0,
                NameDeclaration,
                5,
            ),
            leading_trivia: None,
        },
        body: Some(
            Node {
                node: Node {
                    token: SpannedToken(
                        6,
                        StringSingle(
                            "test",
                        ),
                        12,
                    ),
                    leading_trivia: None,
                },
            },
        ),
        terminator: None,
    },
]
