src/parser/snapshots/rbx_rsml__parser__tests__name_string.snap
---
source: src/parser/mod.rs
expression: parsed.ast
---
[
    Name {
        declaration: Node {
            token: SpannedToken(
                0,
                NameDeclaration,
                5,
            ),
            leading_trivia: None,
        },
        body: Some(
            Node {
                node: Node {
                    token: SpannedToken(
                        6,
                        StringSingle(
                            "MySheet",
                        ),
                        15,
                    ),
                    leading_trivia: None,
                },
            },
        ),
        terminator: Some(
            Node {
                token: SpannedToken(
                    15,
                    SemiColon,
                    16,
                ),
                leading_trivia: None,
            },
        ),
    },
]
